[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/grids.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/chapter-end/Register.gd" type="Script" id=2]
[ext_resource path="res://fonts/harmony-os-sans-sc/styles/caption2.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/harmony-os-sans-sc/styles/h7.tres" type="DynamicFont" id=5]
[ext_resource path="res://themes/Mod.tres" type="Theme" id=6]
[ext_resource path="res://themes/groups/2fa.tres" type="ButtonGroup" id=7]
[ext_resource path="res://themes/groups/data-sync.tres" type="ButtonGroup" id=8]
[ext_resource path="res://themes/groups/subcribe.tres" type="ButtonGroup" id=9]
[ext_resource path="res://fonts/harmony-os-sans-sc/styles/caption1.tres" type="DynamicFont" id=11]
[ext_resource path="res://fonts/intel-one-mono/styles/caption2.tres" type="DynamicFont" id=12]

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="Part1" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BGTemp" type="TextureRect" parent="Part1"]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
margin_right = 40.0
margin_bottom = 40.0

[node name="Margin" type="MarginContainer" parent="Part1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 120.0
margin_bottom = -413.0
custom_constants/margin_right = 120
custom_constants/margin_top = 240
custom_constants/margin_left = 120

[node name="Grid" type="GridContainer" parent="Part1/Margin"]
margin_left = 120.0
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 667.0
custom_constants/vseparation = 60
custom_constants/hseparation = 120
columns = 2

[node name="Email" type="VBoxContainer" parent="Part1/Margin/Grid"]
margin_right = 780.0
margin_bottom = 170.0
rect_min_size = Vector2( 780, 0 )
custom_constants/separation = 16

[node name="Title" type="Label" parent="Part1/Margin/Grid/Email"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTER:EMAIL:TITLE"

[node name="Caption" type="Label" parent="Part1/Margin/Grid/Email"]
margin_top = 52.0
margin_right = 780.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTER:EMAIL:CAPTION"
autowrap = true

[node name="Input" type="LineEdit" parent="Part1/Margin/Grid/Email"]
margin_top = 92.0
margin_right = 780.0
margin_bottom = 137.0
rect_min_size = Vector2( 780, 45 )
theme = ExtResource( 6 )
caret_blink = true

[node name="TwoFA" type="VBoxContainer" parent="Part1/Margin/Grid"]
margin_left = 900.0
margin_right = 1680.0
margin_bottom = 170.0
rect_min_size = Vector2( 780, 0 )
custom_constants/separation = 16

[node name="Title" type="Label" parent="Part1/Margin/Grid/TwoFA"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTER:TWOFA:TITLE"

[node name="Caption" type="Label" parent="Part1/Margin/Grid/TwoFA"]
margin_top = 52.0
margin_right = 780.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTER:TWOFA:CAPTION"
autowrap = true

[node name="Check1" type="CheckBox" parent="Part1/Margin/Grid/TwoFA"]
margin_top = 92.0
margin_right = 780.0
margin_bottom = 123.0
theme = ExtResource( 6 )
group = ExtResource( 7 )
text = "TR:REGISTER:TWOFA:BUTTON:1"

[node name="Check2" type="CheckBox" parent="Part1/Margin/Grid/TwoFA"]
margin_top = 139.0
margin_right = 780.0
margin_bottom = 170.0
theme = ExtResource( 6 )
group = ExtResource( 7 )
text = "TR:REGISTER:TWOFA:BUTTON:2"

[node name="Subcribe" type="VBoxContainer" parent="Part1/Margin/Grid"]
margin_top = 230.0
margin_right = 780.0
margin_bottom = 400.0
rect_min_size = Vector2( 780, 0 )
custom_constants/separation = 16

[node name="Title" type="Label" parent="Part1/Margin/Grid/Subcribe"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTER:SUBSCRIBE:TITLE"

[node name="Caption" type="Label" parent="Part1/Margin/Grid/Subcribe"]
margin_top = 52.0
margin_right = 780.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTER:SUBSCRIBE:CAPTION"
autowrap = true

[node name="Check1" type="CheckBox" parent="Part1/Margin/Grid/Subcribe"]
margin_top = 92.0
margin_right = 780.0
margin_bottom = 123.0
theme = ExtResource( 6 )
group = ExtResource( 9 )
text = "TR:REGISTER:SUBSCRIBE:BUTTON:1"

[node name="Check2" type="CheckBox" parent="Part1/Margin/Grid/Subcribe"]
margin_top = 139.0
margin_right = 780.0
margin_bottom = 170.0
theme = ExtResource( 6 )
group = ExtResource( 9 )
text = "TR:REGISTER:SUBSCRIBE:BUTTON:2"

[node name="DataSync" type="VBoxContainer" parent="Part1/Margin/Grid"]
margin_left = 900.0
margin_top = 230.0
margin_right = 1680.0
margin_bottom = 400.0
rect_min_size = Vector2( 780, 0 )
custom_constants/separation = 16

[node name="Title" type="Label" parent="Part1/Margin/Grid/DataSync"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTER:DATASYNC:TITLE"

[node name="Caption" type="Label" parent="Part1/Margin/Grid/DataSync"]
margin_top = 52.0
margin_right = 780.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTER:DATASYNC:CAPTION"
autowrap = true

[node name="Check1" type="CheckBox" parent="Part1/Margin/Grid/DataSync"]
margin_top = 92.0
margin_right = 780.0
margin_bottom = 123.0
theme = ExtResource( 6 )
group = ExtResource( 8 )
text = "TR:REGISTER:DATASYNC:BUTTON:1"

[node name="Check2" type="CheckBox" parent="Part1/Margin/Grid/DataSync"]
margin_top = 139.0
margin_right = 780.0
margin_bottom = 170.0
theme = ExtResource( 6 )
group = ExtResource( 8 )
text = "TR:REGISTER:DATASYNC:BUTTON:2"

[node name="Part2" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BGTemp" type="TextureRect" parent="Part2"]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Margin" type="MarginContainer" parent="Part2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 250
custom_constants/margin_left = 120

[node name="HBox" type="HBoxContainer" parent="Part2/Margin"]
margin_left = 120.0
margin_top = 250.0
margin_right = 1800.0
margin_bottom = 1080.0
custom_constants/separation = 120

[node name="Left" type="VBoxContainer" parent="Part2/Margin/HBox"]
margin_right = 780.0
margin_bottom = 830.0
rect_min_size = Vector2( 780, 0 )
custom_constants/separation = 60

[node name="Email" type="VBoxContainer" parent="Part2/Margin/HBox/Left"]
margin_right = 780.0
margin_bottom = 75.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="Part2/Margin/HBox/Left/Email"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTERED:EMAIL:TITLE"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Left/Email"]
margin_top = 51.0
margin_right = 780.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTERED:EMAIL:CONTENT"
autowrap = true

[node name="Subscribe" type="VBoxContainer" parent="Part2/Margin/HBox/Left"]
margin_top = 135.0
margin_right = 780.0
margin_bottom = 210.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="Part2/Margin/HBox/Left/Subscribe"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTERED:SUBSCRIBE:TITLE"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Left/Subscribe"]
margin_top = 51.0
margin_right = 780.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTERED:SUBSCRIBE:CONTENT"
autowrap = true

[node name="TwoFa" type="VBoxContainer" parent="Part2/Margin/HBox/Left"]
visible = false
margin_top = 270.0
margin_right = 780.0
margin_bottom = 345.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="Part2/Margin/HBox/Left/TwoFa"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "两步验证"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Left/TwoFa"]
margin_top = 51.0
margin_right = 780.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "已开启两步验证，请使用身份验证器扫描右侧二维码或输入密钥来添加您的验证身份。"
autowrap = true

[node name="DataSync" type="VBoxContainer" parent="Part2/Margin/HBox/Left"]
margin_top = 270.0
margin_right = 780.0
margin_bottom = 345.0
custom_constants/separation = 15

[node name="Title" type="Label" parent="Part2/Margin/HBox/Left/DataSync"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTERED:DATASYNC:TITLE"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Left/DataSync"]
margin_top = 51.0
margin_right = 780.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTERED:DATASYNC:CONTENT"
autowrap = true

[node name="Right" type="VBoxContainer" parent="Part2/Margin/HBox"]
margin_left = 900.0
margin_right = 1680.0
margin_bottom = 830.0
rect_min_size = Vector2( 780, 0 )
custom_constants/separation = 15

[node name="Title" type="Label" parent="Part2/Margin/HBox/Right"]
margin_right = 780.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "TR:REGISTERED:TWOFA:TITLE"

[node name="Caption" type="Label" parent="Part2/Margin/HBox/Right"]
margin_top = 51.0
margin_right = 780.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTERED:TWOFA:CONTENT"
autowrap = true

[node name="Step" type="Label" parent="Part2/Margin/HBox/Right"]
visible = false
margin_top = 90.0
margin_right = 780.0
margin_bottom = 141.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "使用您的身份验证应用（如 Microsoft Authenticator）扫描下方二维码或输入设置密钥来添加您的身份。"
autowrap = true

[node name="QrCodeContainer" type="HBoxContainer" parent="Part2/Margin/HBox/Right"]
margin_top = 90.0
margin_right = 780.0
margin_bottom = 390.0
custom_constants/separation = 30

[node name="Image" type="TextureRect" parent="Part2/Margin/HBox/Right/QrCodeContainer"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
expand = true

[node name="InfoContainer" type="VBoxContainer" parent="Part2/Margin/HBox/Right/QrCodeContainer"]
margin_left = 330.0
margin_right = 692.0
margin_bottom = 300.0
custom_constants/separation = 15
alignment = 2

[node name="Name" type="VBoxContainer" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer"]
margin_top = 107.0
margin_right = 362.0
margin_bottom = 159.0

[node name="Title" type="Label" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer/Name"]
margin_right = 362.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "TR:REGISTERED:TWOFA:USERNAME"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer/Name"]
margin_top = 28.0
margin_right = 362.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "USERNAME"

[node name="Key" type="VBoxContainer" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer"]
margin_top = 174.0
margin_right = 362.0
margin_bottom = 233.0

[node name="Title" type="Label" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer/Key"]
margin_right = 362.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "TR:REGISTERED:TWOFA:KEY"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer/Key"]
margin_top = 28.0
margin_right = 362.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 12 )
text = "KEY"

[node name="Type" type="VBoxContainer" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer"]
margin_top = 248.0
margin_right = 362.0
margin_bottom = 300.0

[node name="Title" type="Label" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer/Type"]
margin_right = 362.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
text = "TR:REGISTERED:TWOFA:KEYTYPE"

[node name="Content" type="Label" parent="Part2/Margin/HBox/Right/QrCodeContainer/InfoContainer/Type"]
margin_top = 28.0
margin_right = 362.0
margin_bottom = 52.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TR:REGISTERED:TWOFA:BASEDTIME"

[node name="Tip" type="Label" parent="Part2/Margin/HBox/Right"]
margin_top = 405.0
margin_right = 780.0
margin_bottom = 429.0
custom_colors/font_color = Color( 0.756863, 0, 0.0823529, 1 )
custom_fonts/font = ExtResource( 11 )
text = "TR:REGISTERED:TWOFA:TIP"
autowrap = true

[node name="Number" type="LineEdit" parent="Part2/Margin/HBox/Right"]
visible = false
margin_top = 444.0
margin_right = 780.0
margin_bottom = 484.0
theme = ExtResource( 6 )

[node name="Button" type="Button" parent="Part2/Margin/HBox/Right"]
visible = false
margin_top = 444.0
margin_right = 780.0
margin_bottom = 480.0
theme = ExtResource( 6 )
text = "验证"

[connection signal="text_changed" from="Part1/Margin/Grid/Email/Input" to="." method="_on_Email_text_changed"]
[connection signal="toggled" from="Part1/Margin/Grid/TwoFA/Check1" to="." method="_on_2fa_toggled"]
